--- a/blocks/edit-form/__close-icon/edit-form__close-icon.css
+++ b/blocks/edit-form/__close-icon/edit-form__close-icon.css
@@ -15,6 +15,7 @@
 
 .edit-form__close-icon:hover {
   opacity: 0.6;
+  cursor: url(../../images/pointer.svg), pointer;
 }
 
 @media screen and (max-width: 879px) {
