--- a/blocks/edit-form/__title/edit-form__title.css
+++ b/blocks/edit-form/__title/edit-form__title.css
@@ -8,6 +8,7 @@
   line-height: 29px;
   margin-top: 34px;
   margin-left: 36px;
+  margin-bottom: 24px;
   position: relative;
 }
 
@@ -16,5 +17,7 @@
     font-size: 18px;
     line-height: 22px;
     margin-left: 22px;
+    margin-top: 25px;
+    margin-bottom: 45px;
   }
 }
