--- a/blocks/photo-grid/__heart/photo-grid__heart.css
+++ b/blocks/photo-grid/__heart/photo-grid__heart.css
@@ -12,6 +12,7 @@
 
 .photo-grid__heart:hover {
   opacity: 0.5;
+  cursor: url(../../images/pointer.svg), pointer;
 }
 
 .photo-grid__heart:active {
