--- a/blocks/profile/__position/profile__position.css
+++ b/blocks/profile/__position/profile__position.css
@@ -5,6 +5,10 @@
   font-size: 18px;
   line-height: 22px;
   margin-top: 16px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  max-width: 336px;
 }
 
 @media screen and (max-width: 879px) {
@@ -12,5 +16,6 @@
     text-align: center;
     font-size: 14px;
     line-height: 17px;
+    max-width: 282px;
   }
 }
