--- a/blocks/edit-form/__field/edit-form__field.css
+++ b/blocks/edit-form/__field/edit-form__field.css
@@ -1,16 +1,15 @@
 .edit-form__field {
+  margin: 0;
+  padding: 0;
   margin-left: 36px;
-  border: rgba(255, 255, 255, 0.2);
-  border-bottom: 1px solid #000000;
+  border: none;
+  border-bottom: 1px solid rgba(26, 25, 25, 0.2);
   width: 358px;
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
   line-height: 17px;
-}
-
-.edit-form__field {
-  outline-color: rgba(26, 25, 25, 0.2);
+  padding-top: 30px;
 }
 
 @media screen and (max-width: 879px) {
