--- a/blocks/edit-form/__save-button/edit-form__save-button.css
+++ b/blocks/edit-form/__save-button/edit-form__save-button.css
@@ -10,22 +10,28 @@
   margin-left: 36px;
   width: 358px;
   border-radius: 2px;
-  height: 50px;
   margin-bottom: 37px;
+  margin-top: 48px;
   transition: opacity .5s linear 0s;
+  border: none;
+  padding-top: 14px;
+  padding-bottom: 18px;
 }
 
 .edit-form__save-button:hover {
   opacity: 0.8;
+  cursor: url(../../images/pointer.svg), pointer;
 }
 
 @media screen and (max-width: 879px) {
   .edit-form__save-button {
     margin-left: 22px;
+    margin-top: 45px;
+    margin-bottom: 25px;
     width: 238px;
-    height: 46px;
     font-weight: 400;
     font-size: 14px;
     line-height: 17px;
+    padding-bottom: 14px;
   }
 }
