--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,9 +1,12 @@
 .footer {
   margin-top: 67px;
+  flex-shrink: 0;
+  margin-bottom: 60px;
 }
 
 @media screen and (max-width: 700px) {
   .footer {
     margin-top: 48px;
+    margin-bottom: 36px;
   }
 }
