--- a/blocks/photo-grid/__box-name/photo-grid__box-name.css
+++ b/blocks/photo-grid/__box-name/photo-grid__box-name.css
@@ -1,7 +1,7 @@
 .photo-grid__box-name {
   max-width: 246px;
   display: flex;
-  margin: 25px 15px 31px 21px;
+  margin: 0 15px 0 21px;
   justify-content: space-between;
   align-items: center;
 }
