--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -6,10 +6,9 @@
   align-self: center;
   display: flex;
   margin-left: 18px;
+  background-color: transparent;
   background-image: url(../../../images/Znak-edit.svg);
-  color: black;
   background-size: 7px;
-  background-color: black;
   background-repeat: no-repeat;
   background-position: center;
   transition: opacity .5s linear 0s;
@@ -17,6 +16,7 @@
 
 .profile__edit-button:hover {
   opacity: .6;
+  cursor: url(../../images/pointer.svg), pointer;
 }
 
 @media screen and (max-width: 879px) {
@@ -25,8 +25,4 @@
     height: 18px;
     margin-left: 10px;
   }
-}
-
-.profile__edit-button:hover .edit-form {
-  display: block;
 }
