--- a/pages/index.css
+++ b/pages/index.css
@@ -6,7 +6,8 @@
 
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__logo/header__logo.css);
-@import url(../blocks/header/__line/header__line.css);
+
+@import url(../blocks/content/content.css);
 
 @import url(../blocks/profile/profile.css);
 @import url(../blocks/profile/__avatar/profile__avatar.css);
@@ -29,16 +30,13 @@
 @import url(../blocks/footer/__link/footer__link.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
 
-@import url(../blocks/edit-form/edit-form.css);
-@import url(../blocks/edit-form/__backround/edit-form__backround.css);
+@import url(../blocks/popup/popup.css);
+@import url(../blocks/popup/_opened/popup_opened.css);
+
+@import url(../blocks//edit-form/edit-form.css);
 @import url(../blocks/edit-form/__close-icon/edit-form__close-icon.css);
-@import url(../blocks//edit-form/__div/edit-form__div.css);
 @import url(../blocks/edit-form/__title/edit-form__title.css);
 @import url(../blocks/edit-form/__field/edit-form__field.css);
 @import url(../blocks/edit-form/__save-button/edit-form__save-button.css);
-@import url(../blocks/edit-form/_opened/edit-form_opened.css);
 
-@import url(../blocks/);
-@import url(../blocks/);
-@import url(../blocks/);
 
