--- a/blocks/photo-grid/__item/photo-grid__item.css
+++ b/blocks/photo-grid/__item/photo-grid__item.css
@@ -1,6 +1,9 @@
 .photo-grid__item {
+  position: relative;
   max-width: 100%;
   object-fit: cover;
   background-color: white;
   border-radius: 10px;
+  display: flex;
+  flex-direction: column;
 }
