--- a/blocks/photo-grid/__photo/photo-grid__photo.css
+++ b/blocks/photo-grid/__photo/photo-grid__photo.css
@@ -3,3 +3,8 @@
   height: 282px;
   border-radius: 10px 10px 0 0;
 }
+
+.photo-grid__photo:hover {
+  opacity: 0.5;
+  cursor: url(../../images/pointer.svg), pointer;
+}
