--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -3,15 +3,13 @@
   color: black;
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
   border-radius: 10px;
-  width: 430px;
+  max-width: 430px;
   position: relative;
   margin: auto;
 }
 
 @media screen and (max-width: 879px) {
   .popup__container {
-    width: 282px;
+    max-width: 282px;
   }
 }
-
-
