--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,9 +1,12 @@
 .popup {
-  display: none;
+  display: flex;
   background-color: rgb(0, 0, 0, .5);
   position: fixed;
   left: 0;
   top: 0;
   width: 100%;
   height: 100%;
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity .6s, visibility 0s 0.6s;
 }
