--- a/blocks/edit-form/__button/edit-form__button.css
+++ b/blocks/edit-form/__button/edit-form__button.css
@@ -20,7 +20,7 @@
 
 .edit-form__button:hover {
   opacity: 0.8;
-  cursor: url(../../images/pointer.svg), pointer;
+  cursor: url(../../../images/pointer.svg), pointer;
 }
 
 @media screen and (max-width: 879px) {
