--- a/blocks/profile/__plus-button/profile__plus-button.css
+++ b/blocks/profile/__plus-button/profile__plus-button.css
@@ -19,7 +19,7 @@
 
 .profile__plus-button:hover {
   opacity: .6;
-  cursor: url(../../images/pointer.svg), pointer;
+  cursor: url(../../../images/pointer.svg), pointer;
 }
 
 @media screen and (max-width: 879px) {
