--- a/blocks/photo-grid/__delite-button/photo-grid__delite-button.css
+++ b/blocks/photo-grid/__delite-button/photo-grid__delite-button.css
@@ -16,5 +16,5 @@
 
 .photo-grid__delite-button:hover {
   opacity: 0.5;
-  cursor: url(../../images/pointer.svg), pointer;
+  cursor: url(../../../images/pointer.svg), pointer;
 }
