--- a/blocks/popup/__close-icon/popup__close-icon.css
+++ b/blocks/popup/__close-icon/popup__close-icon.css
@@ -15,7 +15,7 @@
 
 .popup__close-icon:hover {
   opacity: 0.6;
-  cursor: url(../../images/pointer.svg), pointer;
+  cursor: url(../../../images/pointer.svg), pointer;
 }
 
 @media screen and (max-width: 879px) {
