--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -43,4 +43,16 @@
 @import url(../blocks/popup-photo/popup-photo__photo/popup-photo__photo.css);
 @import url(../blocks/popup-photo/popup-photo__title/popup-photo__title.css);
 
+@import url(../blocks/button/_inactive/button_inactive.css);
+
+@import url(../blocks/form/__input-error/form__input-error.css);
+@import url(../blocks/form/__input-error/_active/form__input-error_active.css);
+@import url(../blocks/form/__set/form__set.css);
+@import url(../blocks/form/__input/_type/form__input_type_error.css);
+
+
+
+@import url(../blocks/button/_inactive/button_inactive.css);
+@import url(../blocks/button/_inactive/button_inactive.css);
+
 
