--- a/src/blocks/edit-form/__button/edit-form__button.css
+++ b/src/blocks/edit-form/__button/edit-form__button.css
@@ -1,4 +1,4 @@
-.edit-form__save-button {
+.edit-form__button {
   display: block;
   font-style: normal;
   font-weight: 400;
@@ -8,6 +8,7 @@
   color: #FFFFFF;
   background-color: black;
   margin-left: 36px;
+  margin-right: 36px;
   width: 358px;
   border-radius: 2px;
   margin-bottom: 37px;
@@ -18,14 +19,15 @@
   padding-bottom: 18px;
 }
 
-.edit-form__save-button:hover {
+.edit-form__button:hover {
   opacity: 0.8;
-  cursor: url(../../images/pointer.svg), pointer;
+  cursor: url(../../../images/pointer.svg), pointer;
 }
 
 @media screen and (max-width: 879px) {
-  .edit-form__save-button {
+  .edit-form__button {
     margin-left: 22px;
+    margin-right: 22px;
     margin-top: 45px;
     margin-bottom: 25px;
     width: 238px;
