--- a/src/blocks/popup/__close-icon/popup__close-icon.css
+++ b/src/blocks/popup/__close-icon/popup__close-icon.css
@@ -15,7 +15,7 @@
 
 .popup__close-icon:hover {
   opacity: 0.6;
-  cursor: url(../../../images/pointer.svg), pointer;
+  cursor: pointer;
 }
 
 @media screen and (max-width: 879px) {
