--- a/main.css
+++ b/main.css
@@ -35,8 +35,8 @@
 .popup-photo{background-color:rgba(0,0,0,.9);z-index:4}
 .popup-photo__photo{max-height:75vh;max-width:75vw}
 .popup-photo__title{color:#fff;font-family:Inter;font-size:12px;font-style:normal;font-weight:400;line-height:15px;margin:0;padding:10px 0 0}
-.form__input-error{display:block;font-size:12px;font-style:normal;font-weight:400;line-height:15px;margin-left:36px;margin-right:36px;margin-top:5px}@media screen and (max-width:879px){.form__input-error{margin-left:22px;margin-right:22px}}
-.form__input-error_active{color:red}
+.form__input-error{display:none;font-size:12px;font-style:normal;font-weight:400;line-height:15px;margin-left:36px;margin-right:36px;margin-top:5px}@media screen and (max-width:879px){.form__input-error{margin-left:22px;margin-right:22px}}
+.form__input-error_active{color:red;display:block}
 .form__set{border:0;margin:0;padding:0}
 .form__input_type_error{border:none;border-bottom:1px solid red;visibility:visible}
 .button_inactive{border:1px solid #000;border-radius:2px;color:grey;cursor:not-allowed;pointer-events:none}
