--- a/src/blocks/popup/__close-icon/popup__close-icon.css
+++ b/src/blocks/popup/__close-icon/popup__close-icon.css
@@ -4,7 +4,7 @@
   position: absolute;
   top: -40px;
   right: -40px;
-  transition: opacity .5s linear 0s;
+  transition: opacity 0.5s linear 0s;
   background-image: url(../../../images/close-Icon.svg);
   background-size: 32px;
   background-color: transparent;
@@ -15,7 +15,7 @@
 
 .popup__close-icon:hover {
   opacity: 0.6;
-  cursor: url(../../../images/pointer.svg), pointer;
+  cursor: pointer;
 }
 
 @media screen and (max-width: 879px) {
